package Projeto_1_ESINF.exceptions;

public class FruitNotFoundException extends Throwable {
    public FruitNotFoundException(String message) {
        super(message);
    }
}
